Tweak the Hash Count/Hash Algorithm Index text.

--- a/draft-pusateri-dnsop-update-timeout.html
+++ b/draft-pusateri-dnsop-update-timeout.html
@@ -556,16 +556,15 @@
 <li>Zero or more hash values</li>
 </ol>
 
-<p> Details regarding these fiels are covered in the following sections.  </p>
+<p> Details regarding these fields are covered in the following sections.  </p>
 <h1 id="rfc.section.5.2">
 <a href="#rfc.section.5.2">5.2.</a> Hash Algorithm Index</h1>
-<p id="rfc.section.5.2.p.1">The Hash Algorithm Index is a 16-bit value that specifies an identifier for the hash algorithm used. The identifiers are declared in a registry maintained by IANA for the purpose of listing acceptable hash algorithms for this purpose. In addition to the algorithm and the index, the registry will contain the output length in bits of the algorithm to be used. It is conceivable, though not likely, that the same algorithm could be used with different output lengths. In this case, each output length would require a different index in the registry. Additions to this registry will be approved with additional documentation under expert review. At the time that the registry is created by IANA, a group of expert reviewers will be established.</p>
-<p id="rfc.section.5.2.p.2">The Hash Algorithm identifier of 0 is considered unused and MUST NOT be used if any hash values are present in the instance.</p>
+<p id="rfc.section.5.2.p.1">The Hash Algorithm Index is a 16-bit value that specifies an identifier for the hash algorithm used. The indexes are declared in a registry maintained by IANA for the purpose of listing acceptable hash algorithms for this purpose. In addition to the algorithm and the index, the registry will contain the output length in bits of the algorithm to be used. It is conceivable, though not likely, that the same algorithm could be used with different output lengths. In this case, each output length would require a different index in the registry. Additions to this registry will be approved with additional documentation under expert review. At the time that the registry is created by IANA, a group of expert reviewers will be established.</p>
+<p id="rfc.section.5.2.p.2">The Hash Algorithm Index of 0 is defined as NOHASH and MUST NOT be used if any hash values are present in the instance.</p>
 <h1 id="rfc.section.5.3">
 <a href="#rfc.section.5.3">5.3.</a> Hash Count</h1>
-<p id="rfc.section.5.3.p.1">The Hash Count is a 16-bit value that specifies the number of hash values for the instance.</p>
-<p id="rfc.section.5.3.p.2">If an instance with Hash Count of 0 is present in a TIMEOUT RR, no other instances should be present in the RR and the Expiry Time applies to all RRs under the owner.</p>
-<p id="rfc.section.5.3.p.3">The Hash Algorithm Index is ignored in this case but SHOULD be set to 0 on transmission. When receiving a TIMEOUT RR with a hash count of 0, the Hash Algorithm Index MUST be ignored.</p>
+<p id="rfc.section.5.3.p.1">The Hash Count is a 16-bit value that specifies the number of hash values for the instance. All hashes within the instance MUST have the same Hash Algorithm Index.</p>
+<p id="rfc.section.5.3.p.2">A Hash Count of 0 indicates that the Expiry Time applies to all resource records with the same owner name and class. There MUST only be one instance of Hash Algorithm Index and Hash Count in this case. When the Hash Count is 0, the Hash Algorithm Index is set to NOHASH on transmission and ignored on reception.</p>
 <h1 id="rfc.section.5.4">
 <a href="#rfc.section.5.4">5.4.</a> Expiry Time</h1>
 <p id="rfc.section.5.4.p.1">The expiry time is a 64-bit number expressed as the number of seconds since the UNIX epoch (00:00:00 UTC on January 1, 1970). This value is an absolute time at which the record will expire. Lease times must be converted to an absolute expiry time when received.</p>
@@ -705,7 +704,7 @@
 <tr>
 <td class="reference"><b id="I-D.sekar-dns-ul">[I-D.sekar-dns-ul]</b></td>
 <td class="top">
-<a>Cheshire, S.</a> and <a>T. Lemon</a>, "<a href="https://tools.ietf.org/html/draft-sekar-dns-ul-02">Dynamic DNS Update Leases</a>", Internet-Draft draft-sekar-dns-ul-02, August 2018.</td>
+<a>Sekar, K.</a>, "<a href="https://tools.ietf.org/html/draft-sekar-dns-ul-01">Dynamic DNS Update Leases</a>", Internet-Draft draft-sekar-dns-ul-01, August 2006.</td>
 </tr>
 <tr>
 <td class="reference"><b id="OPENSSL">[OPENSSL]</b></td>
