Clear xml2rfc cache to get new ID versions.

--- a/draft-pusateri-dnsop-update-timeout.html
+++ b/draft-pusateri-dnsop-update-timeout.html
@@ -690,7 +690,7 @@
 <tr>
 <td class="reference"><b id="I-D.sekar-dns-ul">[I-D.sekar-dns-ul]</b></td>
 <td class="top">
-<a>Sekar, K.</a>, "<a href="https://tools.ietf.org/html/draft-sekar-dns-ul-01">Dynamic DNS Update Leases</a>", Internet-Draft draft-sekar-dns-ul-01, August 2006.</td>
+<a>Cheshire, S.</a> and <a>T. Lemon</a>, "<a href="https://tools.ietf.org/html/draft-sekar-dns-ul-02">Dynamic DNS Update Leases</a>", Internet-Draft draft-sekar-dns-ul-02, August 2018.</td>
 </tr>
 <tr>
 <td class="reference"><b id="OPENSSL">[OPENSSL]</b></td>
