--- a/draft-pusateri-dnsop-update-timeout.html
+++ b/draft-pusateri-dnsop-update-timeout.html
@@ -403,7 +403,7 @@
 
   <meta name="dct.creator" content="Pusateri, T. and T. Wattenberg" />
   <meta name="dct.identifier" content="urn:ietf:id:draft-pusateri-dnsop-update-timeout-01" />
-  <meta name="dct.issued" scheme="ISO8601" content="2019-15" />
+  <meta name="dct.issued" scheme="ISO8601" content="2019-16" />
   <meta name="dct.abstract" content="This specification defines a new DNS TIMEOUT resource record (RR) that associates a lifetime with one or more zone resource records with the same owner name and class. It is intended to be used to transfer resource record lifetime state between a zone's primary and secondary servers and to store lifetime state during server software restarts." />
   <meta name="description" content="This specification defines a new DNS TIMEOUT resource record (RR) that associates a lifetime with one or more zone resource records with the same owner name and class. It is intended to be used to transfer resource record lifetime state between a zone's primary and secondary servers and to store lifetime state during server software restarts." />
 
@@ -427,8 +427,8 @@
 <td class="right">Unaffiliated</td>
 </tr>
 <tr>
-<td class="left">Expires: August 19, 2019</td>
-<td class="right">February 15, 2019</td>
+<td class="left">Expires: August 20, 2019</td>
+<td class="right">February 16, 2019</td>
 </tr>
 
     	
@@ -444,7 +444,7 @@
 <p>This Internet-Draft is submitted in full conformance with the provisions of BCP 78 and BCP 79.</p>
 <p>Internet-Drafts are working documents of the Internet Engineering Task Force (IETF).  Note that other groups may also distribute working documents as Internet-Drafts.  The list of current Internet-Drafts is at https://datatracker.ietf.org/drafts/current/.</p>
 <p>Internet-Drafts are draft documents valid for a maximum of six months and may be updated, replaced, or obsoleted by other documents at any time.  It is inappropriate to use Internet-Drafts as reference material or to cite them other than as "work in progress."</p>
-<p>This Internet-Draft will expire on August 19, 2019.</p>
+<p>This Internet-Draft will expire on August 20, 2019.</p>
 <h1 id="rfc.copyrightnotice"><a href="#rfc.copyrightnotice">Copyright Notice</a></h1>
 <p>Copyright (c) 2019 IETF Trust and the persons identified as the document authors.  All rights reserved.</p>
 <p>This document is subject to BCP 78 and the IETF Trust's Legal Provisions Relating to IETF Documents (https://trustee.ietf.org/license-info) in effect on the date of publication of this document.  Please review these documents carefully, as they describe your rights and restrictions with respect to this document.  Code Components extracted from this document must include Simplified BSD License text as described in Section 4.e of the Trust Legal Provisions and are provided without warranty as described in the Simplified BSD License.</p>
@@ -737,8 +737,8 @@
 </tbody></table>
 <h1 id="rfc.appendix.A">
 <a href="#rfc.appendix.A">Appendix A.</a> Example TIMEOUT resource records</h1>
-<p id="rfc.section.A.p.1">The following example shows some sample TIMEOUT resource records based on a DNS Update containing A and AAAA address plus the corresponding PTR records.</p>
-<p id="rfc.section.A.p.2">A host sending a name registration at time Tn for <samp>A</samp> and <samp>AAAA</samp> records with lease lifetime Ln would have an UPDATE that contains:</p>
+<p id="rfc.section.A.p.1">The following example shows some sample TIMEOUT resource records based on DNS UPDATEs containing A and AAAA address records plus the corresponding PTR records.</p>
+<p id="rfc.section.A.p.2">A host sending a name registration at time Tn for <samp>A</samp> and <samp>AAAA</samp> records with lease lifetime Ln would have a series of UPDATEs (one for each zone) that contain:</p>
 <div id="rfc.table.2"></div>
 <div id="address_update"></div>
 <table cellpadding="3" cellspacing="0" class="tt full center">
@@ -750,24 +750,24 @@
 </tr></thead>
 <tbody>
 <tr>
-<td class="left">name_n.example.com</td>
+<td class="left">name.example.com.</td>
 <td class="left">A</td>
 <td class="left">192.0.2.5</td>
 </tr>
 <tr>
-<td class="left">name_n.example.com</td>
+<td class="left">name.example.com.</td>
 <td class="left">AAAA</td>
 <td class="left">12001:db8::5</td>
 </tr>
 <tr>
 <td class="left">5.2.0.192.in-addr.arpa.</td>
 <td class="left">PTR</td>
-<td class="left">name_n.example.com.</td>
+<td class="left">name.example.com.</td>
 </tr>
 <tr>
 <td class="left">5.0.0.0.0.0.0.0.0.0.0.0.b8.0d.01.20.ip6.arpa. (bytes)</td>
 <td class="left">PTR</td>
-<td class="left">name_n.example.com.</td>
+<td class="left">name.example.com.</td>
 </tr>
 </tbody>
 </table>
@@ -775,7 +775,7 @@
 <div id="rfc.table.3"></div>
 <div id="address_timeout"></div>
 <table cellpadding="3" cellspacing="0" class="tt full center">
-<caption>Corresponding TIMEOUT records</caption>
+<caption>Address TIMEOUT records</caption>
 <thead><tr>
 <th class="left">Owner Name</th>
 <th class="left">RRType</th>
@@ -785,7 +785,7 @@
 </tr></thead>
 <tbody>
 <tr>
-<td class="left">name_n.example.com</td>
+<td class="left">name.example.com.</td>
 <td class="left">TIMEOUT</td>
 <td class="left">0</td>
 <td class="left">0</td>
@@ -807,7 +807,134 @@
 </tr>
 </tbody>
 </table>
-<p></p>
+<p id="rfc.section.A.p.4">Next, assume there are two hosts advertising the same service type (different service types will have different owner names). We will use _ipp._tcp.example.com as an example.</p>
+<p id="rfc.section.A.p.5">Host A sends an UPDATE at time Ta with lease life La for PTR, SRV, A, AAAA, and TXT records. Host B sends an UPDATE at time Tb with lease life Lb for PTR, SRV, A, and TXT records.</p>
+<div id="rfc.table.4"></div>
+<div id="ipp_host_a"></div>
+<table cellpadding="3" cellspacing="0" class="tt full center">
+<caption>DNS UPDATE from Host A</caption>
+<thead><tr>
+<th class="left">Owner name</th>
+<th class="left">RR Type</th>
+<th class="left">Value</th>
+</tr></thead>
+<tbody>
+<tr>
+<td class="left">_ipp._tcp.example.com.</td>
+<td class="left">PTR</td>
+<td class="left">p1._ipp._tcp.example.com.</td>
+</tr>
+<tr>
+<td class="left">p1._ipp._tcp.example.com.</td>
+<td class="left">SRV</td>
+<td class="left">0 0 631 p1.example.com.</td>
+</tr>
+<tr>
+<td class="left">p1._ipp._tcp.example.com.</td>
+<td class="left">TXT</td>
+<td class="left">paper=A4</td>
+</tr>
+<tr>
+<td class="left">p1.example.com.</td>
+<td class="left">A</td>
+<td class="left">192.0.2.1</td>
+</tr>
+<tr>
+<td class="left">p1.example.com.</td>
+<td class="left">AAAA</td>
+<td class="left">2001:db8::1</td>
+</tr>
+</tbody>
+</table>
+<div id="rfc.table.5"></div>
+<div id="ipp_host_b"></div>
+<table cellpadding="3" cellspacing="0" class="tt full center">
+<caption>DNS UPDATE from Host B</caption>
+<thead><tr>
+<th class="left">Owner name</th>
+<th class="left">RR Type</th>
+<th class="left">Value</th>
+</tr></thead>
+<tbody>
+<tr>
+<td class="left">_ipp._tcp.example.com.</td>
+<td class="left">PTR</td>
+<td class="left">p2._ipp._tcp.example.com.</td>
+</tr>
+<tr>
+<td class="left">p2._ipp._tcp.example.com.</td>
+<td class="left">SRV</td>
+<td class="left">0 0 631 p2.example.com.</td>
+</tr>
+<tr>
+<td class="left">p2._ipp._tcp.example.com.</td>
+<td class="left">TXT</td>
+<td class="left">paper=B4</td>
+</tr>
+<tr>
+<td class="left">p2.example.com.</td>
+<td class="left">A</td>
+<td class="left">192.0.2.2</td>
+</tr>
+</tbody>
+</table>
+<p id="rfc.section.A.p.6">For these printer registrations, the TIMEOUT records on the server would look like the following:</p>
+<div id="rfc.table.6"></div>
+<div id="printer_timeout"></div>
+<table cellpadding="3" cellspacing="0" class="tt full center">
+<caption>Service TIMEOUT records</caption>
+<thead><tr>
+<th class="left">Owner Name</th>
+<th class="left">RR Type</th>
+<th class="left">Count</th>
+<th class="left">Alg</th>
+<th class="left">Expire /       Hash List</th>
+</tr></thead>
+<tbody>
+<tr>
+<td class="left">_ipp.tcp.example.com.</td>
+<td class="left">TIMEOUT</td>
+<td class="left">1</td>
+<td class="left">1</td>
+<td class="left">Ta + La&#160;           7ba17d11f8d96bb5 4b7ca675bebaf1b6</td>
+</tr>
+<tr>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left">1</td>
+<td class="left">1</td>
+<td class="left">Tb + Lb&#160;           644685a489ad3bd4 350c1230c7643745</td>
+</tr>
+<tr>
+<td class="left">p1._ipp._tcp.example.com.</td>
+<td class="left">TIMEOUT</td>
+<td class="left">0</td>
+<td class="left">0</td>
+<td class="left">Ta + La</td>
+</tr>
+<tr>
+<td class="left">p2._ipp._tcp.example.com.</td>
+<td class="left">TIMEOUT</td>
+<td class="left">0</td>
+<td class="left">0</td>
+<td class="left">Tb + Lb</td>
+</tr>
+<tr>
+<td class="left">p1.example.com.</td>
+<td class="left">TIMEOUT</td>
+<td class="left">2</td>
+<td class="left">1</td>
+<td class="left">Ta + La&#160;           e6285fbe75eae13c febf9505cf9ffefc           592316d7df872856 bcb8c94fda4603db</td>
+</tr>
+<tr>
+<td class="left">p2.example.com.</td>
+<td class="left">TIMEOUT</td>
+<td class="left">0</td>
+<td class="left">0</td>
+<td class="left">Tb + Lb</td>
+</tr>
+</tbody>
+</table>
 <h1 id="rfc.authors"><a href="#rfc.authors">Authors' Addresses</a></h1>
 <div class="avoidbreak">
   <address class="vcard">
