--- a/draft-pusateri-dnsop-update-timeout.html
+++ b/draft-pusateri-dnsop-update-timeout.html
@@ -749,7 +749,8 @@
 <table><tbody>
 <tr>
 <td class="reference"><b id="FIPS180-4">[FIPS180-4]</b></td>
-<td class="top">"<a href="http://nvlpubs.nist.gov/nistpubs/FIPS/NIST.FIPS.180-4.pdf">NIST, Secure Hash Standard (SHS) FIPS 180-4, National Institue of Standards and Technology, U.S. Department of Commerce</a>", August 2015.</td>
+<td class="top">
+<a>National Institute of Standards and Technology, U.S. Department of Commerce</a>, "<a href="http://nvlpubs.nist.gov/nistpubs/FIPS/NIST.FIPS.180-4.pdf">Secure Hash Standard (SHS) FIPS 180-4</a>", August 2015.</td>
 </tr>
 <tr>
 <td class="reference"><b id="RFC1035">[RFC1035]</b></td>
